--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -5,7 +5,37 @@
 $dojacat: rgb(238, 69, 162);
 
 body {
-  background-color: rgb(0, 0, 0) ;
+  background-color: rgba(145, 145, 145, 0.644) ;
+  cursor: crosshair;
+}
+
+button[type=submit], .sign-out {
+  align-items: center;
+  background-color: initial;
+  background-image: linear-gradient(#464d55, #25292e);
+  border-radius: 8px;
+  border-width: 0;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  flex-direction: column;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 18px;
+  height: 30px;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 32px;
+  text-align: center;
+  text-decoration: none;
+  transform: translate3d(0, 0, 0);
+  transition: all 150ms;
+  vertical-align: baseline;
+  white-space: nowrap;
 }
 
 .alltheforms {
@@ -41,8 +71,9 @@ body {
   background-color: rgb(0, 0, 0);
   border: 1px solid white;
   color: white;
+  text-align: justify;
   display: flex;
-  height: 80px;
+  height: 100px;
   justify-content: center;
   text-shadow: -1px -1px rgb(253, 0, 241), 1px 1px rgb(121, 4, 91), -3px 0 4px #000;
 }
@@ -50,16 +81,23 @@ body {
 h1, h2, h4 {
   font-family: 'Bebas Neue', cursive;
   color: white;
-  text-shadow: -5px -5px rgb(211, 0, 253), 1px 1px rgb(121, 4, 91), -3px 0 4px rgb(0, 0, 0);
+  text-shadow: -5px -5px rgb(211, 0, 253), 1px 1px rgb(121, 4, 91), -3px 0 4px rgb(119, 0, 255);
   text-align: center;
   font-size: 50px;
 }
 
-.alt-color {
-  background-color: $dojacat;
+h5 {
+  font-family: 'Bebas Neue', cursive;
+  color: white;
+  text-shadow: -5px -5px rgb(211, 0, 253), 1px 1px rgb(121, 4, 91), -3px 0 4px rgb(119, 0, 255);
+  text-align: center;
+  font-size: 14px;
 }
-img.moe1, img.moe2{
-    size: 200px
+
+div.box > img.moe1, img.moe2 {
+    width: 235px;
+    height: 100px;
+    object-fit: contain;
 }
 .winner, .winner2, h6, #auth-display {
     color: white;
@@ -72,7 +110,21 @@ img.moe1, img.moe2{
 .box:hover {
   text-shadow: -1px -1px rgb(255, 255, 255), 1px 1px rgb(255, 255, 255), -3px 0 4px #000;
 }
-
+.hvr-grow-shadow {
+    display:inline-block;
+    vertical-align:middle;
+    -webkit-transform:perspective(1px) translateZ(0);
+    transform:perspective(1px) translateZ(0);
+    box-shadow:0 0 1px rgba(0,0,0,0);
+    -webkit-transition-duration:.3s;
+    transition-duration:.3s;
+    -webkit-transition-property:box-shadow,transform;
+    transition-property:box-shadow,transform
+}.hvr-grow-shadow:active, .hvr-grow-shadow:focus, .hvr-grow-shadow:hover {
+    box-shadow:0 10px 10px -10px rgba(0,0,0,.5);
+    -webkit-transform:scale(1.1);
+    transform:scale(1.1)
+}
 .row > div {
     -webkit-transition: all 0.6s ease-in-out;
     -moz-transition: all 0.6s ease-in-out;
